<resources>
    <string name="app_name">Quiz on the planet</string>
    <string name="header">Planet Quiz</string>
    <string name="question_one">What is the largest planet?</string>
    <string name="question_two">Which planet has the most moons?</string>
    <string name="question_three">Which planet spins on its side?</string>

    <string name="mercury">MERCURY</string>
    <string name="venus">VENUS</string>
    <string name="earth">EARTH</string>
    <string name="mars">MARS</string>
    <string name="jupiter">JUPITER</string>
    <string name="saturn">SATURN</string>
    <string name="uranus">URANUS</string>
    <string name="neptune">NEPTUNE</string>
    <string name="good_answer">%s, This is good answer!</string>
    <string name="bed_answer">%s, This is bed answer!</string>

    <string name="jupiter_answer">%s Jupiter is the largest planet and is 2.5 times the mass of all the other planets put together.</string>
    <string name="saturn_answer">%s Saturn has the most moons and has 82 moons.</string>
    <string name="uranus_answer">%s Uranus spins on its side with its axis at nearly a right angle to the sun.</string>
    <string name="correct">CORRECT!</string>
    <string name="wrong">WRONG!</string>
</resources>